=== (ongoing) ===

- Updated README

=== 0.0.2 ===

- Added factories and models 
- Added admins
- Added django-aps-bom to test_requirements.txt because travis.ci fails

=== 0.0.1 ===

- Initial commit